Atividade completa consertada

--- a/Atividade1.ipynb
+++ b/Atividade1.ipynb
@@ -187,33 +187,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (3590035006.py, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[31], line 14\u001b[0;36m\u001b[0m\n\u001b[0;31m    return depay_final\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "depay_redimencionado = redimencionar_imagem(imagem, 0.75)\n",
+    "def processamento_completo(imagem):\n",
+    "    depay_redimencionado = redimencionar_imagem(imagem, 0.75)\n",
     "\n",
-    "depay_rotacionado = depay_redimencionado.rotate(30, expand=True)\n",
+    "    depay_rotacionado = depay_redimencionado.rotate(30, expand=True)\n",
     "\n",
-    "depay_com_filtro = depay_redimencionado.filter(ImageFilter.SHARPEN)\n",
+    "    depay_com_filtro = depay_rotacionado.filter(ImageFilter.SHARPEN)\n",
     "\n",
-    "enhancer = ImageEnhance.Brightness(depay_com_filtro)\n",
+    "    enhancer = ImageEnhance.Brightness(depay_com_filtro)\n",
+    "    depay_com_brilho = enhancer.enhance(1.2) # Aumenta o brilho em 20%\n",
     "\n",
-    "depay_com_brilho = enhancer.enhance(1.2) # Aumenta o brilho em 20%\n",
+    "    enhancer = ImageEnhance.Contrast(depay_com_brilho)\n",
+    "    depay_final = enhancer.enhance(1.3)  # Aumenta o contraste em 30%\n",
     "\n",
-    "enhancer = ImageEnhance.Contrast(depay_com_brilho)\n",
-    "depay_final = enhancer.enhance(1.3)  # Aumenta o contraste em 30%\n",
-    "\n",
-    "return depay_final"
+    "    return depay_final"
    ]
   },
   {
