--- a/Atividade1.ipynb
+++ b/Atividade1.ipynb
@@ -209,10 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Teste o processamento completo\n",
+    "imagem_final = processamento_completo(imagem)\n",
+    "imagem_final.save('imagem_processada.png')"
+   ]
   }
  ],
  "metadata": {
