Atividade completa Memphis Depay

--- a/Atividade1.ipynb
+++ b/Atividade1.ipynb
@@ -209,13 +209,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Teste o processamento completo\n",
     "imagem_final = processamento_completo(imagem)\n",
-    "imagem_final.save('imagem_processada.png')"
+    "imagem_final.save('depay_pai_do_palmeiras.png')"
    ]
   }
  ],
